--- a/style.css
+++ b/style.css
@@ -69,3 +69,9 @@ section{
   border-image: linear-gradient(180deg,blue,cyan);
   border-image-slice: 1;
 }
+footer{
+  text-align: center;
+  padding-bottom: 10px;
+  color: gray;
+  
+}
