footer problem fix

--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ section{
   border-image: linear-gradient(180deg,blue,cyan);
   border-image-slice: 1;
 }
-footer{
+footer p{
   text-align: center;
   padding-bottom: 10px;
   color: gray;
